tests/fail/unique_freeze_mutate.stderr
error[E0442]: Cannot mutably borrow immutable entity 'p'
 --> tests/fail/unique_freeze_mutate.tk:10:7
   |
 10 |     p = new i32(20) // EXPECT: error[E0442]:
   |       ^
error[E0406]: Cannot assign to immutable entity. Missing writable token '#' or '!'.
 --> tests/fail/unique_freeze_mutate.tk:10:7
   |
 10 |     p = new i32(20) // EXPECT: error[E0442]:
   |       ^
error[E0443]: Cannot modify immutable entity 'i32'
 --> tests/fail/unique_freeze_mutate.tk:10:5
   |
 10 |     p = new i32(20) // EXPECT: error[E0442]:
   |     ^
